# ProceduralProgramming

./: .gitignore
u1/: aprasymas.md  mini  mini.c  mini2  mini2.c  u1  u1.c
u2/: main  main.c  u2  u2.c
u3/: Makefile  invariants.sh  main  main.c  mini  mini.c  out  read  reads
u4/: CMakeLists.txt  main.c  mini  mini.c
u4/PSP/: Coding_Standard_u4.md
u4/lib/: stdmain.c  stdmain.h
u4/src/: Makefile  main  main.c
u4/test/: test_main.cpp
